infrastructure/kubernetes/backend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: asyncflow

  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: asyncflow-platform
    app.kubernetes.io/managed-by: kubectl

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
