infrastructure/kubernetes/backend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-network-policy
  namespace: asyncflow

  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: asyncflow-platform
    app.kubernetes.io/managed-by: kubectl

spec:

  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress
    - Egress

  ingress:

    #
    # Allow traffic from Frontend Pods
    #
    - from:
        - podSelector:
            matchLabels:
              app: frontend

      ports:
        - protocol: TCP
          port: 8000

  egress:

    #
    # Allow DNS lookups
    #
    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

    #
    # Allow HTTPS to AWS Services
    # (RDS auth, Secrets Manager, SQS, STS, etc.)
    #
    - ports:
        - protocol: TCP
          port: 443

    #
    # Allow PostgreSQL
    #
    - ports:
        - protocol: TCP
          port: 5432

    #
    # Allow Redis
    #
    - ports:
        - protocol: TCP
          port: 6379
